--- a/world/inxi/.artixlinux/pkgbase.yaml
+++ b/world/inxi/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: inxi
-  version: 3.3.37.1-1
+  version: 3.3.38.1-1
   arch:
     - any
   pkgname:
     - inxi
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.3.37.1-1
+    version: 3.3.38.1-1
     packages:
-      - inxi-3.3.37.1-1-any.pkg.tar.zst
+      - inxi-3.3.38.1-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
