--- a/world/php-imagick/.artixlinux/pkgbase.yaml
+++ b/world/php-imagick/.artixlinux/pkgbase.yaml
@@ -2,7 +2,7 @@
 team: world
 pkgbase:
   name: php-imagick
-  version: 3.7.0-11
+  version: 3.8.0-1
   arch:
     - x86_64
   pkgname:
@@ -10,11 +10,11 @@ pkgbase:
     - php-legacy-imagick
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -33,10 +33,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.7.0-11
+    version: 3.8.0-1
     packages:
-      - php-imagick-3.7.0-11-x86_64.pkg.tar.zst
-      - php-legacy-imagick-3.7.0-11-x86_64.pkg.tar.zst
+      - php-imagick-3.8.0-1-x86_64.pkg.tar.zst
+      - php-legacy-imagick-3.8.0-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
