--- a/world/python-aiohappyeyeballs/.artixlinux/pkgbase.yaml
+++ b/world/python-aiohappyeyeballs/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: python-aiohappyeyeballs
-  version: 2.5.0-1
+  version: 2.6.1-1
   arch:
     - any
   pkgname:
     - python-aiohappyeyeballs
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.5.0-1
+    version: 2.6.1-1
     packages:
-      - python-aiohappyeyeballs-2.5.0-1-any.pkg.tar.zst
+      - python-aiohappyeyeballs-2.6.1-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
