--- a/world/python-yarl/.artixlinux/pkgbase.yaml
+++ b/world/python-yarl/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-yarl
-  version: 1.13.1-1
+  version: 1.20.0-1
   arch:
     - x86_64
   pkgname:
     - python-yarl
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.13.1-1
+    version: 1.20.0-1
     packages:
-      - python-yarl-1.13.1-1-x86_64.pkg.tar.zst
+      - python-yarl-1.20.0-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
