--- a/world/ansible/.artixlinux/pkgbase.yaml
+++ b/world/ansible/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ansible
-  version: 11.4.0-2
+  version: 11.5.0-2
   arch:
     - any
   pkgname:
     - ansible
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 11.4.0-2
+    version: 11.5.0-2
     packages:
-      - ansible-11.4.0-2-any.pkg.tar.zst
+      - ansible-11.5.0-2-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
