--- a/world/ansible-core/PKGBUILD
+++ b/world/ansible-core/PKGBUILD
@@ -9,7 +9,7 @@
 
 pkgname=ansible-core
 _pkgname=ansible
-pkgver=2.18.4
+pkgver=2.18.5
 pkgrel=1
 pkgdesc='Radically simple IT automation platform'
 arch=('any')
@@ -61,11 +61,14 @@ optdepends=(
 provides=('python-ansible' 'ansible-base')
 replaces=('ansible-base')
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/ansible/ansible/archive/refs/tags/v${pkgver}.tar.gz"
-        bump_resolvelib_upper_version_bound.patch)
-sha512sums=('2d2e0341557c843ce8fe280e30785ff9871bec0f9072c951131e666cf97a953f38550915efa77d69f9bd0b0a0af02c9c3f42706c389aaa399e40996b249dd1d6'
-            '420d03e64a189043c7fbaa6a5799eed04ea28c4c2729197b4a51467ec672ab73325f6ea46d02a0ad84bc89aa1a8ffc4d23c716003215029eb60fc68577154e5c')
-b2sums=('7a28bd767735361d8d955465e2da65a28df79bf66d77904bc0edae6ca082720f967e57f4da6c37ab2f507a8775ffffb6f1cbccb22b6ea7a684abbea1623f8b59'
-        'f2885491361673f067716b0d130a9043843715513f55bcb6fefc86159169056b567922f642816a2cfbbb7b6d31efc94c1f204f72865dc33881cf13886aa3967b')
+        'bump_resolvelib_upper_version_bound.patch'
+        'relax_setuptools_version_requirements.patch')
+sha512sums=('8358f9fe1bfe31ecc77c78c4d3f7248ea7e0ad52d0376f1769211bb0977bd0994065ff69aae61a5ba8173d517bd13f4438d5129caa6d2eba730f84bdc6342c50'
+            '420d03e64a189043c7fbaa6a5799eed04ea28c4c2729197b4a51467ec672ab73325f6ea46d02a0ad84bc89aa1a8ffc4d23c716003215029eb60fc68577154e5c'
+            'e05f37ff80852f48dd0414d3c8efb62bd9456e7f25c200f687449e3e2a85462478789240ebf94626b252b30cd75b67ef65b9cec2cf3591d58fa3442f5cc508b5')
+b2sums=('d99ca4033fa1771c7448332f9bd55104464a57048fd43cde5f598ef0095d9d81638822957fce42739db8eb370c1498ee366e1c0094a0cede6c1fde4c9eb40943'
+        'f2885491361673f067716b0d130a9043843715513f55bcb6fefc86159169056b567922f642816a2cfbbb7b6d31efc94c1f204f72865dc33881cf13886aa3967b'
+        '3415873d55e7a2f01a3ea0eaf9224c5e2d5d6de5bd0e9f6b0799cd07d46022ff23352ffac9237045340538beaa50fb0c12f297054387b2487265a4c9dbb99248')
 
 prepare() {
   cd "${_pkgname}-${pkgver}"
@@ -78,6 +81,11 @@ prepare() {
   # EDIT: resolvelib version requirement has been bumped but not yet tagged
   # See https://github.com/ansible/ansible/commit/771f7ad29ca4d259761eaa88673c2e32f6412bbe
   patch -Np1 < "${srcdir}/bump_resolvelib_upper_version_bound.patch"
+
+  # Temporary patch to allow building with latest setuptools
+  # Currently, upstream has set the upper version version bound for it at `< 72.1.0`
+  # See https://github.com/ansible/ansible/blob/devel/pyproject.toml#L2
+  patch -Np1 < "${srcdir}/relax_setuptools_version_requirements.patch"
 }
 
 build() {
