--- a/world/fontforge/.artixlinux/pkgbase.yaml
+++ b/world/fontforge/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: fontforge
-  version: 20230101-5
+  version: 20230101-6
   arch:
     - x86_64
   pkgname:
     - fontforge
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 20230101-5
+    version: 20230101-6
     packages:
-      - fontforge-20230101-5-x86_64.pkg.tar.zst
+      - fontforge-20230101-6-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
