--- a/world/catch2/.artixlinux/pkgbase.yaml
+++ b/world/catch2/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: catch2
-  version: 3.8.0-3
+  version: 3.8.1-1
   arch:
     - x86_64
   pkgname:
     - catch2
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.8.0-3
+    version: 3.8.1-1
     packages:
-      - catch2-3.8.0-3-x86_64.pkg.tar.zst
+      - catch2-3.8.1-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
