--- a/world/hdf5/.artixlinux/pkgbase.yaml
+++ b/world/hdf5/.artixlinux/pkgbase.yaml
@@ -1,18 +1,19 @@
 ---
 pkgbase:
   name: hdf5
-  version: 1.14.5-1
+  version: 1.14.6-3
   arch:
     - x86_64
   pkgname:
     - hdf5
+    - hdf5-openmpi
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.14.5-1
+    version: 1.14.6-3
     packages:
-      - hdf5-1.14.5-1-x86_64.pkg.tar.zst
+      - hdf5-1.14.6-3-x86_64.pkg.tar.zst
+      - hdf5-openmpi-1.14.6-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
