--- a/world/b3sum/.artixlinux/pkgbase.yaml
+++ b/world/b3sum/.artixlinux/pkgbase.yaml
@@ -2,7 +2,7 @@
 team: world
 pkgbase:
   name: b3sum
-  version: 1.8.1-1
+  version: 1.8.2-1
   arch:
     - x86_64
   pkgname:
@@ -10,11 +10,11 @@ pkgbase:
     - libblake3
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -33,10 +33,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.8.1-1
+    version: 1.8.2-1
     packages:
-      - b3sum-1.8.1-1-x86_64.pkg.tar.zst
-      - libblake3-1.8.1-1-x86_64.pkg.tar.zst
+      - b3sum-1.8.2-1-x86_64.pkg.tar.zst
+      - libblake3-1.8.2-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
