--- a/galaxy/fpc/.artixlinux/pkgbase.yaml
+++ b/galaxy/fpc/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: fpc
-  version: 3.2.2-11
+  version: 3.2.2-11.1
   arch:
     - x86_64
   pkgname:
     - fpc
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 3.2.2-11
+    version: 3.2.2-11.1
     packages:
-      - fpc-3.2.2-11-x86_64.pkg.tar.zst
+      - fpc-3.2.2-11.1-x86_64.pkg.tar.zst
 team: galaxy
