--- a/galaxy/qt6pas/.artixlinux/pkgbase.yaml
+++ b/galaxy/qt6pas/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: qt6pas
-  version: 6.2.7-2
+  version: 6.2.8-1
   arch:
     - x86_64
   pkgname:
     - qt6pas
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 6.2.7-2
+    version: 6.2.8-1
     packages:
-      - qt6pas-6.2.7-2-x86_64.pkg.tar.zst
+      - qt6pas-6.2.8-1-x86_64.pkg.tar.zst
 team: galaxy
