--- a/world/sane/.artixlinux/pkgbase.yaml
+++ b/world/sane/.artixlinux/pkgbase.yaml
@@ -7,7 +7,7 @@ pkgbase:
   pkgname:
     - sane
 actions:
-  addRepo: world
+  addRepo: world-goblins
   removeRepo: null
   triggersBuild: true
   triggersRebuild: false
@@ -25,8 +25,9 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: null
-    packages: []
+    version: 1.3.1-2
+    packages:
+      - sane-1.3.1-2-x86_64.pkg.tar.zst
   world-gremlins:
     version: null
     packages: []
