--- a/galaxy/dino/.artixlinux/pkgbase.yaml
+++ b/galaxy/dino/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: galaxy
 pkgbase:
   name: dino
-  version: 0.5.0-1
+  version: 0.5.0-2
   arch:
     - x86_64
   pkgname:
     - dino
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -50,6 +50,6 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 0.5.0-1
+    version: 0.5.0-2
     packages:
-      - dino-0.5.0-1-x86_64.pkg.tar.zst
+      - dino-0.5.0-2-x86_64.pkg.tar.zst
