--- a/galaxy/libe-book/.artixlinux/pkgbase.yaml
+++ b/galaxy/libe-book/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libe-book
-  version: 0.1.3-17.1
+  version: 0.1.3-18
   arch:
     - x86_64
   pkgname:
     - libe-book
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-goblins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 0.1.3-17.1
+    version: 0.1.3-18
     packages:
-      - libe-book-0.1.3-17.1-x86_64.pkg.tar.zst
+      - libe-book-0.1.3-18-x86_64.pkg.tar.zst
 team: galaxy
