--- a/world/nginx/.artixlinux/pkgbase.yaml
+++ b/world/nginx/.artixlinux/pkgbase.yaml
@@ -1,12 +1,18 @@
 ---
 pkgbase:
   name: nginx
-  version: 1.26.3-1
+  version: 1.28.0-1
   arch:
     - x86_64
   pkgname:
     - nginx
     - nginx-src
+    - nginx-mod-geoip
+    - nginx-mod-image-filter
+    - nginx-mod-mail
+    - nginx-mod-perl
+    - nginx-mod-stream
+    - nginx-mod-xslt
 actions:
   addRepo: world
   removeRepo: null
@@ -32,10 +38,16 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.26.3-1
+    version: 1.28.0-1
     packages:
-      - nginx-1.26.3-1-x86_64.pkg.tar.zst
-      - nginx-src-1.26.3-1-x86_64.pkg.tar.zst
+      - nginx-1.28.0-1-x86_64.pkg.tar.zst
+      - nginx-src-1.28.0-1-x86_64.pkg.tar.zst
+      - nginx-mod-geoip-1.28.0-1-x86_64.pkg.tar.zst
+      - nginx-mod-image-filter-1.28.0-1-x86_64.pkg.tar.zst
+      - nginx-mod-mail-1.28.0-1-x86_64.pkg.tar.zst
+      - nginx-mod-perl-1.28.0-1-x86_64.pkg.tar.zst
+      - nginx-mod-stream-1.28.0-1-x86_64.pkg.tar.zst
+      - nginx-mod-xslt-1.28.0-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
