--- a/galaxy/scummvm/.artixlinux/pkgbase.yaml
+++ b/galaxy/scummvm/.artixlinux/pkgbase.yaml
@@ -1,14 +1,14 @@
 ---
 pkgbase:
   name: scummvm
-  version: 2.9.0-2
+  version: 2.9.0-3
   arch:
     - x86_64
   pkgname:
     - scummvm
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-goblins
+  removeRepo: galaxy-gremlins
   triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 2.9.0-2
+    version: 2.9.0-3
     packages:
-      - scummvm-2.9.0-2-x86_64.pkg.tar.zst
+      - scummvm-2.9.0-3-x86_64.pkg.tar.zst
 team: galaxy
