--- a/world/ffmpeg/.artixlinux/pkgbase.yaml
+++ b/world/ffmpeg/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: ffmpeg
-  version: 2:7.1-9
+  version: 2:7.1-11
   arch:
     - x86_64
   pkgname:
@@ -25,15 +25,16 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: null
-    packages: []
+    version: 2:7.1-11
+    packages:
+      - ffmpeg-2:7.1-11-x86_64.pkg.tar.zst
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 2:7.1-9
+    version: 2:7.1-10
     packages:
-      - ffmpeg-2:7.1-9-x86_64.pkg.tar.zst
+      - ffmpeg-2:7.1-10-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
