--- a/world/ffmpeg4.4/.artixlinux/pkgbase.yaml
+++ b/world/ffmpeg4.4/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: ffmpeg4.4
-  version: 4.4.5-3
+  version: 4.4.5-5
   arch:
     - x86_64
   pkgname:
@@ -25,15 +25,16 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: null
-    packages: []
+    version: 4.4.5-5
+    packages:
+      - ffmpeg4.4-4.4.5-5-x86_64.pkg.tar.zst
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 4.4.5-3
+    version: 4.4.5-4
     packages:
-      - ffmpeg4.4-4.4.5-3-x86_64.pkg.tar.zst
+      - ffmpeg4.4-4.4.5-4-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
