--- a/world/gstreamer/.artixlinux/pkgbase.yaml
+++ b/world/gstreamer/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: gstreamer
-  version: 1.26.0-3
+  version: 1.26.0-5
   arch:
     - x86_64
   pkgname:
@@ -30,11 +30,11 @@ pkgbase:
     - gstreamer-docs
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -47,37 +47,60 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: null
-    packages: []
+    version: 1.26.0-5
+    packages:
+      - gstreamer-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-plugins-bad-libs-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-plugins-base-libs-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-plugins-base-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-plugins-good-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-plugins-bad-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-plugins-ugly-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-libav-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-plugin-gtk-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-plugin-msdk-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-plugin-opencv-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-plugin-qml6-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-plugin-qmlgl-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-plugin-qsv-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-plugin-va-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-plugin-wpe-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-devtools-libs-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-devtools-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-rtsp-server-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-editing-services-1.26.0-5-x86_64.pkg.tar.zst
+      - gstreamer-vaapi-1.26.0-5-x86_64.pkg.tar.zst
+      - gst-python-1.26.0-5-x86_64.pkg.tar.zst
+      - gstreamer-docs-1.26.0-5-x86_64.pkg.tar.zst
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 1.26.0-3
+    version: 1.26.0-4
     packages:
-      - gstreamer-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-plugins-bad-libs-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-plugins-base-libs-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-plugins-base-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-plugins-good-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-plugins-bad-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-plugins-ugly-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-libav-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-plugin-gtk-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-plugin-msdk-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-plugin-opencv-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-plugin-qml6-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-plugin-qmlgl-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-plugin-qsv-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-plugin-va-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-plugin-wpe-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-devtools-libs-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-devtools-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-rtsp-server-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-editing-services-1.26.0-3-x86_64.pkg.tar.zst
-      - gstreamer-vaapi-1.26.0-3-x86_64.pkg.tar.zst
-      - gst-python-1.26.0-3-x86_64.pkg.tar.zst
-      - gstreamer-docs-1.26.0-3-x86_64.pkg.tar.zst
+      - gstreamer-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-plugins-bad-libs-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-plugins-base-libs-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-plugins-base-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-plugins-good-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-plugins-bad-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-plugins-ugly-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-libav-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-plugin-gtk-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-plugin-msdk-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-plugin-opencv-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-plugin-qml6-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-plugin-qmlgl-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-plugin-qsv-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-plugin-va-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-plugin-wpe-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-devtools-libs-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-devtools-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-rtsp-server-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-editing-services-1.26.0-4-x86_64.pkg.tar.zst
+      - gstreamer-vaapi-1.26.0-4-x86_64.pkg.tar.zst
+      - gst-python-1.26.0-4-x86_64.pkg.tar.zst
+      - gstreamer-docs-1.26.0-4-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
