--- a/world/handbrake/.artixlinux/pkgbase.yaml
+++ b/world/handbrake/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: handbrake
-  version: 1.9.2-1
+  version: 1.9.2-3
   arch:
     - x86_64
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - handbrake-cli
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -26,16 +26,18 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: null
-    packages: []
+    version: 1.9.2-3
+    packages:
+      - handbrake-1.9.2-3-x86_64.pkg.tar.zst
+      - handbrake-cli-1.9.2-3-x86_64.pkg.tar.zst
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 1.9.2-1
+    version: 1.9.2-2
     packages:
-      - handbrake-1.9.2-1-x86_64.pkg.tar.zst
-      - handbrake-cli-1.9.2-1-x86_64.pkg.tar.zst
+      - handbrake-1.9.2-2-x86_64.pkg.tar.zst
+      - handbrake-cli-1.9.2-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
