--- a/world/languagetool/PKGBUILD
+++ b/world/languagetool/PKGBUILD
@@ -6,11 +6,11 @@
 
 pkgname=languagetool
 pkgver=6.6
-pkgrel=1
+pkgrel=2
 pkgdesc='An open source language checker'
 arch=(any)
 url='https://www.languagetool.org'
-license=(LGPL)
+license=(LGPL-2.1-or-later)
 depends=(java-runtime-headless)
 makedepends=(unzip)
 optdepends=('java-runtime: needed for the GUI version'
@@ -20,7 +20,7 @@ source=(https://www.languagetool.org/download/LanguageTool-$pkgver.zip
         languagetool.sh)
 noextract=($pkgname-$pkgver.zip)
 sha256sums=('53600506b399bb5ffe1e4c8dec794fd378212f14aaf38ccef9b6f89314d11631'
-            'c559be1fbead8845caf1f269cf39bfde6486ce06aabcbdd4ba58d402168b61a7')
+            '1230bed5e596ba161a08cddc70764afb46f018e8f483e9934017b3c7b2aaea70')
 
 package() {
   install -d "$pkgdir"/usr/{bin,share/java/$pkgname/libs}
