--- a/world/vlc/.artixlinux/pkgbase.yaml
+++ b/world/vlc/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: vlc
-  version: 3.0.21-16
+  version: 3.0.21-18
   arch:
     - x86_64
   pkgname:
@@ -26,16 +26,18 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: null
-    packages: []
+    version: 3.0.21-18
+    packages:
+      - vlc-3.0.21-18-x86_64.pkg.tar.zst
+      - libvlc-3.0.21-18-x86_64.pkg.tar.zst
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 3.0.21-16
+    version: 3.0.21-17
     packages:
-      - vlc-3.0.21-16-x86_64.pkg.tar.zst
-      - libvlc-3.0.21-16-x86_64.pkg.tar.zst
+      - vlc-3.0.21-17-x86_64.pkg.tar.zst
+      - libvlc-3.0.21-17-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
