--- a/world/recordmydesktop/.artixlinux/pkgbase.yaml
+++ b/world/recordmydesktop/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: recordmydesktop
-  version: 0.4.0-3
+  version: 0.4.0-4
   arch:
     - x86_64
   pkgname:
     - recordmydesktop
 actions:
-  addRepo: null
-  removeRepo: null
+  addRepo: world
+  removeRepo: world-gremlins
   triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: false
-  triggersRepoRemove: false
+  triggersRepoAdd: true
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.4.0-3
+    version: 0.4.0-4
     packages:
-      - recordmydesktop-0.4.0-3-x86_64.pkg.tar.zst
+      - recordmydesktop-0.4.0-4-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
