--- a/world/snapper/.artixlinux/pkgbase.yaml
+++ b/world/snapper/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: snapper
-  version: 0.12.1-1.1
+  version: 0.12.2-2
   arch:
     - x86_64
   pkgname:
     - snapper
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -25,15 +25,16 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: null
-    packages: []
+    version: 0.12.1-3
+    packages:
+      - snapper-0.12.1-3-x86_64.pkg.tar.zst
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 0.12.1-2
+    version: 0.12.2-2
     packages:
-      - snapper-0.12.1-2-x86_64.pkg.tar.zst
+      - snapper-0.12.2-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
