--- a/lib32/lib32-libshout/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-libshout/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: lib32-libshout
-  version: 2.4.6-4
+  version: 1:2.4.6-4
   arch:
     - x86_64
   pkgname:
     - lib32-libshout
 actions:
   addRepo: lib32
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: lib32-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -40,9 +40,9 @@ repos:
     version: null
     packages: []
   lib32:
-    version: 2.4.6-4
+    version: 1:2.4.6-4
     packages:
-      - lib32-libshout-2.4.6-4-x86_64.pkg.tar.zst
+      - lib32-libshout-1:2.4.6-4-x86_64.pkg.tar.zst
   galaxy-goblins:
     version: null
     packages: []
