--- a/lib32/lib32-libtheora/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-libtheora/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: lib32-libtheora
-  version: 1.1.1-14
+  version: 1.2.0-1
   arch:
     - x86_64
   pkgname:
     - lib32-libtheora
 actions:
   addRepo: lib32
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: lib32-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -40,9 +40,9 @@ repos:
     version: null
     packages: []
   lib32:
-    version: 1.1.1-14
+    version: 1.2.0-1
     packages:
-      - lib32-libtheora-1.1.1-14-x86_64.pkg.tar.zst
+      - lib32-libtheora-1.2.0-1-x86_64.pkg.tar.zst
   galaxy-goblins:
     version: null
     packages: []
