Updated grub - 2:2.12.r283.ga4da71da-1

--- a/system/grub/.artixlinux/pkgbase.yaml
+++ b/system/grub/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: grub
-  version: 2:2.12.r260.gaae2ea61-1
+  version: 2:2.12.r283.ga4da71da-1
   arch:
     - x86_64
   pkgname:
@@ -22,9 +22,9 @@ repos:
     version: null
     packages: []
   system:
-    version: 2:2.12.r260.gaae2ea61-1
+    version: 2:2.12.r283.ga4da71da-1
     packages:
-      - grub-2:2.12.r260.gaae2ea61-1-x86_64.pkg.tar.zst
+      - grub-2:2.12.r283.ga4da71da-1-x86_64.pkg.tar.zst
   world-goblins:
     version: null
     packages: []
