--- a/system/grub/PKGBUILD
+++ b/system/grub/PKGBUILD
@@ -19,10 +19,9 @@ pkgname='grub'
 pkgdesc='GNU GRand Unified Bootloader (2)'
 epoch=2
 _pkgver=2.12
-_unifont_ver='16.0.02'
+_unifont_ver='16.0.03'
 #pkgver=${_pkgver/-/}
-pkgver='2.12.r226.g56ccc5ed'
-pkgver='2.12.r260.gaae2ea61'
+pkgver='2.12.r283.ga4da71da'
 pkgrel=1
 url='https://www.gnu.org/software/grub/'
 arch=('x86_64')
@@ -111,7 +110,7 @@ source=(
 )
 b2sums=('a6cec7271c3ea54a99f02ee6bc0a5825c8be657af68ba9a32b39a5fe8bcb571fb1ba39210426f6bf6a48d913e6e00df37dc2123ea1b39330f4c47bd9dbac9ae3'
         'SKIP'
-        '03d2c64d795e0dc904d3648ff0d74e49ca4003964cd1c784dc82e61b3d070cc35c295a3291163c3c990db61a8590df0f718fb212ea96e4a4b4734e02d005bc2c'
+        'b67b0b1fe896ed403b23ec34d929d95324ffb710467ffcd2f2292dedb652c097b941337d18621fa6a7f955e1331d552e14b3f71353f523b3846f433a645f9bcb'
         'SKIP'
         '992c71790785304c28fbaf0dba21dab3e283b199509f0e7e1aa0df08126da75e15b6626c3638279ff2ecaa59b925096d7dbd67d6a53cebd0ce4326ff3719d25b'
         'b4cd9ac976a579eca19d54c0b31c8d6324525fe5a0b9f5405deb63845367ac1adaa80ece4c166dfd5304608c41aa44b4f64efe235c03f437523b993be06e06e3'
@@ -122,7 +121,7 @@ b2sums=('a6cec7271c3ea54a99f02ee6bc0a5825c8be657af68ba9a32b39a5fe8bcb571fb1ba392
 _backports=(
   # current git master for loads of security fixes
   # https://lists.gnu.org/archive/html/grub-devel/2025-02/msg00024.html
-  "grub-${_pkgver}..aae2ea619e0f09c353fd6929910f925c92a412c0"
+  "grub-${_pkgver}..a4da71dafeea519b034beb159dfe80c486c2107c"
 )
 
 _reverts=(
