Updated util-linux - 2.41-4

--- a/system/util-linux/.artixlinux/pkgbase.yaml
+++ b/system/util-linux/.artixlinux/pkgbase.yaml
@@ -8,11 +8,11 @@ pkgbase:
     - util-linux
     - util-linux-libs
 actions:
-  addRepo: system
+  addRepo: null
   removeRepo: system-gremlins
   triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: true
+  triggersRepoAdd: false
   triggersRepoRemove: true
   triggersNoCheck: false
 repos:
