Updated ruby-byebug - 12.0.0-2

--- a/world/ruby-byebug/.artixlinux/pkgbase.yaml
+++ b/world/ruby-byebug/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: ruby-byebug
-  version: 11.1.3-6
+  version: 12.0.0-2
   arch:
     - x86_64
   pkgname:
     - ruby-byebug
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 11.1.3-6
+    version: 12.0.0-2
     packages:
-      - ruby-byebug-11.1.3-6-x86_64.pkg.tar.zst
+      - ruby-byebug-12.0.0-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
