Updated ruby-crack - 1.0.0-5

--- a/world/ruby-crack/PKGBUILD
+++ b/world/ruby-crack/PKGBUILD
@@ -6,7 +6,7 @@
 _gemname='crack'
 pkgname="ruby-${_gemname}"
 pkgver=1.0.0
-pkgrel=3
+pkgrel=5
 pkgdesc='Really simple JSON and XML parsing, ripped from Merb and Rails.'
 arch=('any')
 url='https://github.com/jnunemaker/crack/'
@@ -14,6 +14,7 @@ license=('MIT')
 depends=(
   ruby
   ruby-rexml
+  ruby-bigdecimal
 )
 makedepends=(
   ruby-rdoc
