Updated ruby-cucumber-cucumber-expressions - 17.1.0-4

--- a/world/ruby-cucumber-cucumber-expressions/PKGBUILD
+++ b/world/ruby-cucumber-cucumber-expressions/PKGBUILD
@@ -4,13 +4,14 @@
 pkgname=ruby-cucumber-cucumber-expressions
 pkgver=17.1.0
 _commit=b5dcaa533ae6d2ed36a486bdaabbdcc6e6f46777
-pkgrel=2
+pkgrel=4
 pkgdesc="Cucumber Expressions - a simpler alternative to Regular Expressions"
 arch=(any)
 url='https://github.com/cucumber/cucumber-expressions/tree/main/ruby'
 license=(MIT)
 depends=(
   ruby
+  ruby-bigdecimal
 )
 makedepends=(
   git
