Updated ruby-docile - 1.4.1-3

--- a/world/ruby-docile/PKGBUILD
+++ b/world/ruby-docile/PKGBUILD
@@ -5,7 +5,7 @@
 _gemname='docile'
 pkgname="ruby-${_gemname}"
 pkgver=1.4.1
-pkgrel=1
+pkgrel=3
 pkgdesc="keeps your Ruby DSLs tame and well-behaved"
 arch=('any')
 url='https://ms-ati.github.io/docile'
@@ -20,7 +20,6 @@ checkdepends=(
   ruby-bundler
   ruby-rake
   ruby-rspec
-  ruby-simplecov
 )
 options=(!emptydirs)
 source=("https://github.com/ms-ati/docile/archive/v$pkgver/$_gemname-$pkgver.tar.gz")
@@ -31,6 +30,10 @@ prepare() {
 
   # we use an archive not a git checkout
   sed --in-place --regexp-extended 's|git ls-files -z|find -print0|' "${_gemname}.gemspec"
+
+  # remove dependency on simplecov to break dependency cycle
+  sed --in-place '/require "simplecov"/,+5d' spec/spec_helper.rb
+  sed --in-place '/Object.send/d' spec/spec_helper.rb
 }
 
 build() {
