Updated ruby-mini_portile2 - 2.8.8-4

--- a/world/ruby-mini_portile2/PKGBUILD
+++ b/world/ruby-mini_portile2/PKGBUILD
@@ -8,7 +8,7 @@
 _gemname='mini_portile2'
 pkgname="ruby-${_gemname}"
 pkgver=2.8.8
-pkgrel=1
+pkgrel=4
 pkgdesc='Simple autoconf builder for developers'
 url='https://github.com/flavorjones/mini_portile'
 arch=('any')
@@ -42,6 +42,8 @@ prepare() {
 
   # we don't build from a git checkout
   sed --in-place --regexp-extended 's|`git ls-files -z`\.split\("\\x0"\)|`find . -type f -not -path "*/\.git*" -printf "%P\\n"`\.split\("\\n"\)|' "${_gemname}.gemspec"
+
+  sed --in-place --regexp-extended 's/2\.8\.7/3\.5/g' test/assets/test-cmake-1.0/CMakeLists.txt
 }
 
 build() {
