--- a/world/ruby-mini_portile2/.artixlinux/pkgbase.yaml
+++ b/world/ruby-mini_portile2/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-mini_portile2
-  version: 2.8.8-1
+  version: 2.8.8-4
   arch:
     - any
   pkgname:
     - ruby-mini_portile2
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.8.8-1
+    version: 2.8.8-4
     packages:
-      - ruby-mini_portile2-2.8.8-1-any.pkg.tar.zst
+      - ruby-mini_portile2-2.8.8-4-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
