Updated ruby-parallel - 1.27.0-2

--- a/world/ruby-parallel/.artixlinux/pkgbase.yaml
+++ b/world/ruby-parallel/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-parallel
-  version: 1.26.3-4
+  version: 1.27.0-2
   arch:
     - any
   pkgname:
     - ruby-parallel
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.26.3-4
+    version: 1.27.0-2
     packages:
-      - ruby-parallel-1.26.3-4-any.pkg.tar.zst
+      - ruby-parallel-1.27.0-2-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
