Updated ruby-sus-fixtures-async - 0.2.0-3

--- a/world/ruby-sus-fixtures-async/PKGBUILD
+++ b/world/ruby-sus-fixtures-async/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=ruby-sus-fixtures-async
 pkgver=0.2.0
-pkgrel=1
+pkgrel=3
 pkgdesc='Test fixtures for running in Async'
 arch=(any)
 url='https://github.com/socketry/sus-fixtures-async'
@@ -18,10 +18,11 @@ makedepends=(
   ruby-rdoc
 )
 checkdepends=(
-  ruby-bake-modernize
+  ruby-bake
   ruby-bake-test
   ruby-bundler
   ruby-covered
+  ruby-decode
 )
 options=(!emptydirs)
 source=(git+https://github.com/socketry/sus-fixtures-async.git#tag=v$pkgver)
@@ -30,7 +31,11 @@ sha256sums=('6f2687e532ee54d0c99194fd546cb8cf5720eab3cacd5c986a2cc65870794a11')
 prepare() {
   cd sus-fixtures-async
   sed -r -e 's|~>|>=|g' -e '/signing_key/d' -i sus-fixtures-async.gemspec
-  sed -i '/bake-gem/d;/utopia-project/d;/decode/d;/rubocop/d;' gems.rb
+
+  sed --in-place \
+    --expression '/group :maintenance/,/end/d' \
+    --expression '/rubocop/d' \
+    gems.rb
 }
 
 build() {
