Updated ruby-getoptlong - 0.2.1-1

--- a/world/ruby-getoptlong/.artixlinux/pkgbase.yaml
+++ b/world/ruby-getoptlong/.artixlinux/pkgbase.yaml
@@ -1,19 +1,20 @@
 ---
+team: world
 pkgbase:
   name: ruby-getoptlong
-  version: 0.1.1-4
+  version: 0.2.1-1
   arch:
     - any
   pkgname:
     - ruby-getoptlong
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
-  triggersNoCheck: true
+  triggersRepoRemove: true
+  triggersNoCheck: false
 repos:
   system-goblins:
     version: null
@@ -31,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.1.1-4
+    version: 0.2.1-1
     packages:
-      - ruby-getoptlong-0.1.1-4-any.pkg.tar.zst
+      - ruby-getoptlong-0.2.1-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,4 +53,3 @@ repos:
   galaxy:
     version: null
     packages: []
-team: world
