--- a/world/dpdk/.artixlinux/pkgbase.yaml
+++ b/world/dpdk/.artixlinux/pkgbase.yaml
@@ -1,19 +1,19 @@
 ---
-team: null
+team: world
 pkgbase:
   name: dpdk
-  version: 24.11.1-1
+  version: 24.11.2-1
   arch:
     - x86_64
   pkgname:
     - dpdk
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 24.11.1-1
+    version: 24.11.2-1
     packages:
-      - dpdk-24.11.1-1-x86_64.pkg.tar.zst
+      - dpdk-24.11.2-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
