--- a/world/gufw/.artixlinux/pkgbase.yaml
+++ b/world/gufw/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: gufw
-  version: 24.04-3
+  version: 24.04-4
   arch:
     - any
   pkgname:
     - gufw
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 24.04-3
+    version: 24.04-4
     packages:
-      - gufw-24.04-3-any.pkg.tar.zst
+      - gufw-24.04-4-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
