--- a/world/liferea/.artixlinux/pkgbase.yaml
+++ b/world/liferea/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: liferea
-  version: 1.14.6-1
+  version: 1.14.6-2
   arch:
     - x86_64
   pkgname:
     - liferea
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.14.6-1
+    version: 1.14.6-2
     packages:
-      - liferea-1.14.6-1-x86_64.pkg.tar.zst
+      - liferea-1.14.6-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
